FIX-folders and files security and config to connect frontend